# Price-predictor

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.spaces.yml  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  deploy-spaces.yml
configs/: config.yaml
configs/data/: otodom.yaml
configs/model/: catboost.yaml  lightgbm.yaml  xgboost.yaml
configs/paths/: default.yaml
configs/training/: default.yaml
data/: raw.dvc
docker/: api.Dockerfile  mlflow.Dockerfile  prometheus.yml  spaces.Dockerfile  supervisord.conf  ui.Dockerfile
docker/initdb/: 01_schema.sql
docs/decisions/: 0001-record-architecture-decisions.md  0002-config-split-pydantic-settings-and-hydra.md  0003-mlflow-backend-store.md  0004-single-hf-spaces-image.md  0005-protocol-first-ports-and-di.md  0006-otodom-next-data-extraction.md  0007-district-canonical-dictionary.md  0008-conformal-prediction-intervals.md  0009-dvc-remote-s3-compatible.md  0010-manual-promotion-with-auto-recommendation.md  0011-hf-space-pulls-model-from-registry.md  0012-statistical-drift-gate-evidently-for-reports.md  0013-assumed-next-data-contract.md  0014-kaggle-dataset-primary-source.md
notebooks/: 01_eda_placeholder.ipynb
scripts/: scrape.py  train.py
src/price_predictor/: __init__.py  __main__.py
src/price_predictor/config/: __init__.py  hydra.py  logging.py  settings.py
src/price_predictor/data/: __init__.py  lake.py  ports.py  repository.py  schemas.py  validation.py
src/price_predictor/data/kaggle/: __init__.py  downloader.py  loader.py
src/price_predictor/domain/: __init__.py  constants.py  enums.py  exceptions.py  listing.py  model_version.py  prediction.py  validation.py
src/price_predictor/features/: __init__.py  pipeline.py  ports.py
src/price_predictor/monitoring/: __init__.py  drift.py  evidently_report.py  job.py  metrics.py  ports.py  report.py
src/price_predictor/pipeline/: __init__.py  artifact.py  training.py
src/price_predictor/registry/: __init__.py  mlflow_registry.py  ports.py  promotion.py
src/price_predictor/scraping/: __init__.py  parser.py  pipelines.py  ports.py  runner.py  spider.py
src/price_predictor/serving/: __init__.py  app.py  asgi.py  ports.py  predictor.py  schemas.py
src/price_predictor/training/: __init__.py  conformal.py  estimators.py  evaluation.py  ports.py  report.py  trainer.py  tuning.py
src/price_predictor/ui/: __init__.py  streamlit_app.py
tests/: conftest.py
tests/integration/: test_mlflow_registry.py  test_postgres_repository.py
tests/unit/: test_package.py
tests/unit/config/: test_hydra.py  test_logging.py  test_settings.py
tests/unit/data/: test_data.py  test_lake.py  test_validation.py
tests/unit/data/kaggle/: test_kaggle.py
tests/unit/data/kaggle/fixtures/: apartments_pl_2023_08.csv  apartments_pl_2024_06.csv  apartments_rent_pl_2024_06.csv
tests/unit/domain/: test_exceptions.py  test_listing.py  test_model_version.py  test_prediction.py
tests/unit/features/: test_features.py
tests/unit/monitoring/: test_evidently_report.py  test_monitoring.py
tests/unit/pipeline/: test_artifact.py  test_training.py
tests/unit/registry/: test_promotion.py  test_registry.py
tests/unit/scraping/: test_parser.py  test_persist.py  test_scraping.py
tests/unit/scraping/fixtures/: next_data_sample.json
tests/unit/serving/: test_app.py  test_predictor.py
tests/unit/training/: test_conformal.py  test_evaluation.py  test_trainer.py  test_training.py  test_tuning.py
tests/unit/ui/: test_ui.py
